@@ -1,3 +1,8 @@
+2003-10-01  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-day-view.c (process_component):
+	* gui/e-week-view.c (process_component): expand recurrences here.
+
 2003-09-30  Rodrigo Moya <rodrigo@ximian.com>
 
 	* pcs/cal-backend-file.c (match_recurrence_sexp): removed.
